Add user profile route
Forgot it, sorry, hehe
