# Backend/src/api/controllers/auth.controller.js
@@ -325,3 +325,26 @@ module.exports.resetPassword = async (req, res) => {
     return res.status(500).json({ message: "Server error while resetting password!" });
   }
 };
+
+//< [GET] /api/auth/users/profile
+module.exports.getUserProfile = async (req, res) => {
+  try {
+    const userId = req.user._id;
+
+    const user = await User.findById(userId)
+      .select("-password")
+      .populate("favorites");
+
+    if (!user) {
+      return res.status(404).json({ message: "User not found!" });
+    }
+
+    return res.status(200).json({
+      message: "User profile retrieved successfully!",
+      user
+    });
+  } catch (error) {
+    console.error(error);
+    return res.status(500).json({ message: "Server error while fetching user profile!" });
+  }
+};
